--- a/templates/kafka/docker-compose.yml
+++ b/templates/kafka/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       com.prometheus.monitoring: true
       com.prometheus.port: 1234
     tty: true
-    image: wurstmeister/kafka:1.0.0
+    image: wurstmeister/kafka:2.11-1.1.1
     stdin_open: true
 
   kafka-manager:
@@ -52,7 +52,7 @@ services:
     labels:
       io.rancher.container.hostname_override: container_name
     tty: true
-    image: adopteunops/kafka-manager:1.3.3.17
+    image: hlebalbau/kafka-manager:1.3.3.18
     stdin_open: true
   kafka-manager-setup:
     external_links:
@@ -65,6 +65,7 @@ services:
     image: skalogs/kafka-manager-setup:1.0.0
     environment:
       ZK_HOSTS: "{{kafka_zookeeper_path}}"
+      KAFKA_VERSION: "1.1.0"
     links:
     - kafka-manager:kafka-manager
     stdin_open: true
